tests/errors/simple.pa
program gcd(output);
var a, b: integer;
	c: boolean;
	d: real;

function func(a: real; var o: boolean) : integer;
	var e: boolean;
	begin

	end;

begin
	writeln;
	writeln;
	writeln;
end.
